@@ -79,7 +79,18 @@ Tester::test (void)
       retval = -1;
     }
 
-  // Construct UUID using the assignment constructor
+  ACE_Utils::UUID nil_uuid (*ACE_Utils::UUID::NIL_UUID.to_string ());
+  ACE_DEBUG ((LM_DEBUG,
+              "UUID Constructed from NIL_UUID with string copy\n %s\n",
+              nil_uuid.to_string ()->c_str ()));
+
+  if (nil_uuid != ACE_Utils::UUID::NIL_UUID)
+    {
+      ACE_ERROR ((LM_ERROR, "Error: UUIDs are not the same with NIL_UUID string copy\n"));
+      retval = -1;
+    }
+
+    // Construct UUID using the assignment constructor
   ACE_Utils::UUID new_uuid_assigment;
   new_uuid_assigment = new_uuid;
   ACE_DEBUG ((LM_DEBUG,
